<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5sp"
            android:onClick="filtrar"
            android:text="@string/filtrar" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5sp"
            android:onClick="remover"
            android:text="@string/remover"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="adicionar"
            android:text="@string/adicionar" />
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:id="@+id/lista_carros"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rg_filtrarMain">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todos"
                android:layout_marginRight="2sp"
                android:id="@+id/rb_todos"
                android:onClick="filtroMain"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carros_venda"
                android:checked="false"
                android:layout_marginRight="2sp"
                android:id="@+id/rb_vendedores"
                android:onClick="filtroMain"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interessados_em_comprar"
                android:id="@+id/rb_compradores"
                android:onClick="filtroMain"/>
        </RadioGroup>
    </LinearLayout>
</LinearLayout>